--- a/src/pages/Home.modules.css
+++ b/src/pages/Home.modules.css
@@ -1,9 +1,26 @@
+ 
+
 .card{
-    border: 1px solid black;
-    width: 200px;
+    
+    text-align: center;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
 .main_div{
     display: grid;
     grid-template-columns: repeat(5,1fr);
+    gap: 20px;
+    padding: 10px;
+}
+.moreDetails{
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+    border: none; 
+}
+.addTocart{
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+    border: none;  
 }
